# Navigate to New Project Form
appId: com.harpa.pro
tags:
  - projects
  - navigation
---
- runFlow: subflows/ensure-logged-in-mike.yaml

- tapOn:
    id: "btn-new-project"
- waitForAnimationToEnd
- assertVisible: "New Site"
- assertVisible: "Site Name"
- tapOn:
    id: "btn-back"
- waitForAnimationToEnd
- assertVisible: "Sites"
